--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
   {% if key %}
     <div class="overlay" id="overlay">
       <div class="key-box">
-        <p>Chave Descriptografada: {{ key }}</p>
+        <p>Por favor, salve esta chave: {{ key }}</p>
         <button class="continue-btn" onclick="closeOverlay()">Continue</button>
       </div>
     </div>
