--- a/templates/set_user.html
+++ b/templates/set_user.html
@@ -15,7 +15,7 @@
     <form action="/" method="POST">
       <div class="form-group">
         <label for="username" class="small">Usuário</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Digite o usario" required>
+        <input type="text" id="username" name="username" class="form-control" placeholder="Digite o usuário" required>
       </div>
       <button type="submit" class="btn btn-primary btn-block">Confimar</button>
     </form>
